Modify new post and set form code.

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,10 @@
 <div class = "parent-container">
 <div class = "post-container">
+<% if flash[:success] %>
+ <div class="notice"><%= flash[:success] %></div>
+<% end %>
   <h1>Create New Post</h1>
-  <%= form_with model: @post, url: posts_new_path, method: :post, scope: :post do |f| %>
+<%= form_with model: @post, url: user_posts_path do |f|  %>
     <div class = "column">
       <%= f.text_field :title, placeholder: "Title of post", class: "text-input" %>
       <%= f.text_area :text, placeholder: 'Descript of post', class: "text-input" %>
