Modify index and set routes.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
   <% end %>
 
   <div class="create-post">
-    <%= link_to create_post_path do %>
+    <%= link_to new_user_post_path(@user) do %>
       <button class="btn-create-post">create post</button>
     <%end%>
   </div>
