--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -112,13 +112,6 @@ a {
   margin: 20px;
   border: 1px solid black;
 }
-.create-post {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
 
 .btn-create-post {
   background-color: rgb(66, 66, 245);
@@ -126,7 +119,8 @@ a {
   border-radius: 0.2rem;
   color: aliceblue;
 }
-.parent-container{
+
+.parent-container {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -159,13 +153,35 @@ a {
   margin-right: 20px;
 }
 
+.comment-container {
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 3px solid black;
+  padding: 3rem;
+  border-radius: 1rem;
+  margin: 3rem;
+}
+
 .comment-section {
-  width: 20%;
+  width: 30vw;
   height: auto;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin: 10px;
+  margin-bottom: 1rem;
+}
+
+.btn-comment:hover {
+  background-color: #0872ec;
+  padding: 0.3rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  justify-content: center;
+  align-items: center;
 }
 
 .create-post {
@@ -175,7 +191,7 @@ a {
 }
 
 .btn-post {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   padding: 0.3rem;
   border: none;
   border-radius: 5px;
@@ -208,5 +224,5 @@ a {
   background-color: #4d5fff;
   padding: 0.5rem;
   color: aliceblue;
-  border-radius: 0.2rem;-color: #4d5fff;
+  border-radius: 0.2rem;
 }
