fix linter error.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,9 +10,11 @@
     </div>
   <% end %>
 </div>
+<div class='comment-container'>
 <%= form_with model: @comment, url: post_path, method: :post, scope: :comment do |f| %>
   <div class = "comment-section">
     <%= f.text_area :text, placeholder: "Add Comment" %>
-    <%= f.submit "Comment" %>
   </div>
+   <%= f.submit "Comment", class:'btn-comment'%>
 <% end %>
+</div>
