--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,8 +1,10 @@
-<div class = "user-post mt-8 border-2 border-blue-gray">
-<h3><%= post.title %></h3>
-<p><%= post.text%></p>
-<aside class="text-right mr-2">
-<span>Comments: <%= post.comments_counter %></span>
-<span>Likes: <%= post.likes_counter %></span>
-</aside>
+<div class = "user-post">
+  <div class = "post-title">
+    <h3><%= post.title %></h3>
+    <p><%= post.text%></p>
+  </div>
+  <aside class="text-right mr-2">
+    <span>Comments: <%= post.comments_counter %></span>
+    <span>Likes: <%= post.likes_counter %></span>
+  </aside>
 </div>
