--- a/app/views/posts/_user_post.html.erb
+++ b/app/views/posts/_user_post.html.erb
@@ -1,7 +1,7 @@
-<div class = "user-post mt-8 border-2 border-blue-gray">
-  <div class= "title flex justify-between mb-2">
-    <h2><%= post.title %>by <%= post.author.name %></h2>
-    <aside class= 'text-right mr-2'>
+<div class = "user-post">
+  <div class= "title">
+    <h2><%= post.title %> <strong>  by  </strong> <%= post.author.name %></h2>
+    <aside class= 'counter-section'>
       <span>Comments: <%= post.comments_counter %></span>
       <span>Likes: <%= post.likes_counter %></span>
     </aside>
