--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "Rails Blag App" %>
+<% content_for :title, "Blog App" %>
 <section class="users-container">
   <% @user.each do |user| %>
-  <%= render "user", user: user %>
-<% end %>
-</section>
+    <%= render "user", user: user %>
+  <% end %>
+  </section>
