--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -256,14 +256,15 @@ a {
 .nav-border {
   width: 100vw;
   border: 5px solid transparent;
-  border-image: linear-gradient(
+  border-image:
+    linear-gradient(
       to right,
-      #ff0000,
-      #ffff00,
-      #00ff00,
-      #00ffff,
-      #0000ff,
-      #ff00ff
+      #f00,
+      #ff0,
+      #0f0,
+      #0ff,
+      #00f,
+      #f0f
     )
     10;
   border-radius: 12px;
@@ -271,16 +272,17 @@ a {
 
 .border {
   border: 10px solid transparent; /* set border width and make it transparent */
-  border-image: linear-gradient(
+  border-image:
+    linear-gradient(
       to right,
-      #ff0000,
-      #ffff00,
-      #00ff00,
-      #00ffff,
-      #0000ff,
-      #ff00ff
+      #f00,
+      #ff0,
+      #0f0,
+      #0ff,
+      #00f,
+      #f0f
     )
-    10; 
+    10;
   padding: 20px;
   margin-top: 50%;
   border-radius: 1rem;
