Update user and make a design as a figma.

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,7 @@
 <%= link_to user_path(user) do %>
   <li class="user-list">
     <div class="user-image">
-    <img src=<%= user.photo%> >
+    <img class="profile-image" src=<%= user.photo%> >
     </div>
     <div class="user-info">
       <h3 class="username"><%= user.name %></h3>
